client/src/utils/style.css
.h-4{
    height: 4%;
}
.h-5{
    height: 5%;
}
.h-6{
    height: 6%;
}
.h-89{
    height: 88%;
}
.h-90{
    height: 90%;
}
.h-94{
    height: 94%;
}
.h-95{
    height: 95%;
}
.overflow-y-scroll{
    overflow-y: scroll;
}
.fs-small{
    font-size: small;
}
.bg-blue{
    background-color: aliceblue;
}
::-webkit-scrollbar{
    background: white;
    width: 0.5rem;
}

::-webkit-scrollbar-thumb{
    background: gray;
}

::-webkit-scrollbar-thumb:hover{
    background: darkslategray;
}

